<resources>
    <string name="app_name">技术对接</string>

    <string name="action_settings">Settings</string>
    <string name="action_send">发送</string>

    <string name="login_timeout">登录过期, 请重新登录</string>

    <string name="home">首页</string>
    <string name="send_mission">发布</string>
    <string name="mission">供求</string>
    <string name="store">社区</string>
    <string name="my">我的</string>

    <string name="user_info">用户中心</string>

    <string name="loading">请稍后…</string>
    <string name="not_update_version">当前已经是最新版本</string>

    <string name="auth_cancel">授权关闭</string>
    <string name="auth_error">授权失败</string>
    <string name="share_complete">分享成功</string>
    <string name="share_error">分享出错</string>
    <string name="share_cancel">分享关闭</string>
    <string name="network_error">网络错误</string>
    <string name="service_error">服务器错误, 请稍后重试</string>
    <string-array name="product_category">
        <item>类别</item>
        <item>人才</item>
        <item>技术</item>
        <item>项目</item>
        <item>设备</item>
        <item>专利</item>
        <item>其他</item>
    </string-array>

    <string-array name="location_category">
        <item>所在地区</item>
        <item>石家庄市</item>
        <item>承德市</item>
        <item>张家口市</item>
        <item>秦皇岛市</item>
        <item>唐山市</item>
        <item>廊坊市</item>
        <item>保定市</item>
        <item>沧州市</item>
        <item>衡水市</item>
        <item>邢台市</item>
        <item>全国</item>

    </string-array>

    <string-array name="money_category">
        <item>金额范围</item>
        <item>2K/月</item>
        <item>2&#8211;3K/月</item>
        <item>3&#8211;4.5K/月</item>
        <item>4.5&#8211;8K/月</item>
        <item>8&#8211;10K/月</item>
        <item>10K/月以上</item>
    </string-array>

    <string-array name="company_category">
        <item>企业性质</item>
        <item>合资</item>
        <item>国企</item>
        <item>民营</item>
        <item>上市公司</item>
    </string-array>
    <string-array name="company_size_category">
        <item>企业规模</item>
        <item>少于50人</item>
        <item>50&#8211;150人</item>
        <item>150&#8211;500人</item>
        <item>500人以上</item>
    </string-array>
</resources>
