<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/home_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/DIMEN_10PX"
        android:paddingTop="@dimen/DIMEN_10PX">

        <LinearLayout
            android:id="@+id/home_bottom_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/DIMEN_80PX"
                android:layout_height="@dimen/DIMEN_80PX"
                android:background="@drawable/home_state_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:text="@string/home"
                android:textColor="@color/gray2_to_red_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_bottom_mission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/DIMEN_80PX"
                android:layout_height="@dimen/DIMEN_80PX"
                android:background="@drawable/home2_state_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:text="@string/mission"
                android:textColor="@color/gray2_to_red_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_bottom_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/DIMEN_100PX"
                android:layout_height="@dimen/DIMEN_100PX"
                android:background="@drawable/home3_state_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:text="@string/send_mission"
                android:textColor="@color/gray2_to_red_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_bottom_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/DIMEN_80PX"
                android:layout_height="@dimen/DIMEN_80PX"
                android:background="@drawable/home4_state_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:text="@string/store"
                android:textColor="@color/gray2_to_red_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_bottom_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/DIMEN_80PX"
                android:layout_height="@dimen/DIMEN_80PX"
                android:background="@drawable/home5_state_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:text="@string/my"
                android:textColor="@color/gray2_to_red_selector" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>